--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,17 @@
-.App {
-  text-align: center;
-}
+/* @import url(‘https://fonts.googleapis.com/css2?family=Inter:wght@300;600&display=swap’); */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+    font-family: ‘Inter’, sans-serif;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+:root{
+    --red: #E50916;
+    --white:#fff;
+    --header-height:70px;
+    --dark-bg:#221f1f;
+    --light-bg:#f7f3f3;
+    --button-bg:rgb(77, 77, 156);
+    --transparent-bg:rgba(20, 20, 20, 0.7);
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
