--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -15,6 +15,7 @@
     justify-content: flex-end;
     padding: 0 10px 0 10px;
     color: white;
+    height: 50vh;
 }
 
 .other-articles-container {
