--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,16 @@
-/* @import url(‘https://fonts.googleapis.com/css2?family=Inter:wght@300;600&display=swap’); */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
 *{
     margin:0;
     padding:0;
     box-sizing: border-box;
-    font-family: ‘Inter’, sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
+
+body {
+    background-color: antiquewhite;
+}
+
 :root{
     --red: #E50916;
     --white:#fff;
