--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,38 +1,76 @@
-.banner-content {
-    height: 50vh;
-    width: 90%;
-    margin: 20px auto;
-    display: grid;
-    grid-template-columns: 3fr 2fr;
-}
-
-.main-article-container {
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+.banner {
     display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    padding: 0 10px 0 10px;
-    color: white;
-    height: 50vh;
-}
-
-.other-articles-container {
-    display: grid;
-    height: 50vh;
-    grid-template-columns: repeat(2,1fr);
-    grid-gap: 10px;
-    padding: 0 10px 0 10px;
-}
-
-.other-article-item {
-    display: flex; 
-    flex-direction: column;
-    justify-content: flex-end;
-    color: var(--white);
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 40px;
+  }
+  
+  .main-article,
+  .other-article {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    padding: 0 0 10px 10px;
+    cursor: pointer;
+    position: relative;
+  }
+  
+  .article-info {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    background-color: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(2px);
+    padding: 10px;
+    border-radius: 5px;
+    color: white;
+  }
+
+  .article-info h2 {
+    color: white;
+  }
+  
+  .main-article {
+    width: 100%;
+    height: 60vh;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
+}
+
+.main-article:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+}
+
+.other-articles {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 20px;
+  width: 100%;
+}
+
+.other-article {
+  width: 100%;
+  height: 40vh;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease;
+}
+
+.other-article:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+}
+
+@media (max-width: 768px) {
+  .main-article {
+    height: 50vh;
+  }
+
+  .other-article {
+    height: 35vh;
+  }
 }
