--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,34 +1,54 @@
-.header-container{
-    height:50px;
-    background-color: var(--dark-bg);
+.header-accent {
+    background-color: #4e4e4e;
+    height: 24px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    margin-bottom: 32px;
+  }
+  
+  .home-icon {
+    font-size: 24px;
+    color: #4e4e4e;
+    cursor: pointer;
+  }
+  
+  .auth-link,
+  .nav-link {
+    color: #4e4e4e;
+    text-decoration: none;
+    font-size: 14px;
+    margin-right: 20px;
+    transition: all 0.3s ease;
+  }
+  
+  .auth-link:hover,
+  .nav-link:hover {
+    color: #ff7096;
+  }
+  
+  .categories-container {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding:0 20px;
-}
-.home-icon{
-    color:var(--white);
-    cursor:pointer;
-    font-size:30px;
-}
-.categories-container{
-    width:50%;
-    display: flex;
-    justify-content: space-between;
-    text-decoration: none;
-}
-.nav-link,.auth-link{
-    text-decoration: none;
-    color:var(--white);
-}
-.auth-link{
-  background-color: var(--button-bg);
-  padding:8px 16px;
-  border-radius:8px;
-  border:none;
-  cursor:pointer;
-}
-.username{
-    color:var(--white);
-    margin-right:10px;
-}
+  }
+  
+  .username {
+    font-size: 16px;
+    font-weight: 500;
+    color: #333;
+    margin-right: 10px;
+  }
+  
+  button {
+    background:none;
+    border:none;
+    margin:0;
+    padding:0;
+    cursor: pointer;
+  }
+  
