--- a/src/pages/ArticleDetails/ArticleDetails.css
+++ b/src/pages/ArticleDetails/ArticleDetails.css
@@ -1,35 +1,47 @@
-.details-container{
-    width:80%;
-    margin:20px auto;
-    min-height:100vh;
-}
-.details-container h1{
-    border-bottom:solid 2px black;
-    padding-bottom:20px;
-    margin-bottom:20px;
-}
-.details-container h2{
-    padding-bottom:10px;
-    margin-bottom:10px;
-    font-weight:300;
-}
-.details-info-container{
+.details-container {
+    width: 90%;
+    margin: 20px auto;
+    font-family: Arial, sans-serif;
+    background-color: antiquewhite;
+  }
+  
+  h1 {
+    font-size: 32px;
+    font-weight: 700;
+    color: #333;
+    margin-bottom: 10px;
+  }
+  
+  h2 {
+    font-size: 24px;
+    font-weight: 500;
+    color: #555;
+    margin-bottom: 20px;
+  }
+  
+  .details-info-container {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-}
-.published{
-    margin-left:10px;
-}
-.article-span{
+    margin-bottom: 20px;
+  }
+  
+  .article-span {
     font-weight: 600;
-}
-.article-description{
-    margin-top:20px;
-}
-.details-image{
-    width:100%;
-    height:40vh;
+    color: #555;
+  }
+  
+  .details-image {
+    width: 100%;
+    height: auto;
     object-fit: cover;
-    margin-top:10px;
-    /* object-position:center; */
-}
+    margin-bottom: 20px;
+  }
+  
+  .article-description {
+    font-size: 16px;
+    line-height: 1.5;
+    color: #333;
+    margin-bottom: 10px;
+  }
+  
