--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,11 @@
+.header-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 100;
+}
+
 .header-accent {
   background-color: #4e4e4e;
   height: 24px;
@@ -8,6 +16,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: antiquewhite;
   padding: 10px 20px;
   margin-bottom: 32px;
   flex-wrap: wrap;
