--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap');
+
 .header-wrapper {
   position: fixed;
   top: 0;
@@ -14,7 +16,7 @@
 
 .header-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   background-color: antiquewhite;
   padding: 10px 20px;
@@ -22,11 +24,12 @@
   flex-wrap: wrap;
 }
 
-.home-icon {
-  font-size: 24px;
-  color: #333;
-  cursor: pointer;
+.title {
+  font-family: 'Playfair Display', serif;
+  font-weight: 700;
+  font-size: 2.5rem;
 }
+
 
 .auth-link,
 .nav-link {
@@ -40,6 +43,11 @@
 .auth-link:hover,
 .nav-link:hover {
   color: #ff7096;
+}
+
+.nav-link.active {
+  color: #ff7096;
+  font-weight: 600;
 }
 
 .categories-container {
@@ -61,23 +69,12 @@ button {
   cursor: pointer;
 }
 
-@media (max-width: 569px) {
-    .header-container {
-        margin-top: -28px;
-    }
+@media (max-width: 800px) {
+  .header-container {
+    flex-direction: column;
+  }
 
-    .categories-container {
-        flex-direction: column;
-        margin-top: 32px;
-    }
-    
-    .signin-container {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-    }
-
-    .username {
-        margin-right: 20px;
-    }
+  .title {
+    text-align: center;
+  }
 }
