--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -15,20 +15,24 @@
 }
 
 .header-container {
-  display: flex;
-  justify-content: space-evenly;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
   align-items: center;
   background-color: antiquewhite;
   padding: 10px 20px;
   margin-bottom: 32px;
   flex-wrap: wrap;
+  justify-items: center; 
 }
 
 .title {
   font-family: 'Playfair Display', serif;
   font-weight: 700;
   font-size: 2.5rem;
+  text-align: center;
+  grid-column: 2;
 }
+
 
 
 .auth-link,
@@ -52,6 +56,7 @@
 
 .categories-container {
   display: flex;
+  margin: 0;
 }
 
 .username {
@@ -71,6 +76,7 @@ button {
 
 @media (max-width: 800px) {
   .header-container {
+    display: flex;
     flex-direction: column;
   }
 
